--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/image.jpg');
-    background-size: cover;      
+    background-color:darkgrey;
+/*     background-image: url('/image.jpg');
+    background-size: cover;       */
     background-position: center;
     background-repeat: no-repeat; 
 }
