--- a/style.css
+++ b/style.css
@@ -9,11 +9,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:darkgrey;
-/*     background-image: url('/image.jpg');
-    background-size: cover;       */
-    background-position: center;
-    background-repeat: no-repeat; 
+    background-image: url('/img.jpg');
+    background-size: cover;  
+    background-position: center; 
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -21,8 +20,8 @@ body {
     margin: 0 auto;
     margin-top: 30px;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
-    backdrop-filter: blur(20px);  /* Apply blur effect */
+    background-color: rgba(255, 255, 255, 0.5); 
+    backdrop-filter: blur(20px); 
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
