--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/img.jpg');
+    background-image: url('img.jpg');
     background-size: cover;  
     background-position: center; 
     background-repeat: no-repeat;
